--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.8.6",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
+    "nodemailer": "^6.4.2",
     "winston": "^3.2.1"
   }
 }
